--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#7C3AED" />
     <title>MS Special - Shito, Dresses & Bags</title>
     <meta name="description" content="Shop premium Shito pepper sauce, stylish dresses, and quality bags at MS Special. Located in Okaishei, Accra." />
+    
+    <!-- PWA / Webapp -->
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="MS Special" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+    
     <script src="https://js.paystack.co/v1/inline.js"></script>
   </head>
   <body>
